Add relevant visual data to explore screen
Changes include, but may not be limited to:
-  correct 'explore' folder name typo, which may make it appear like the directory was deleted
- move components folder into explore
- move circle image to a separate file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ flutter:
     - assets/food_pics/
     - assets/magazine_pics/
     - assets/profile_pics/
+    - assets/sample_data/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
