--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   bloc: ^8.0.3
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  uuid: ^3.0.6
+  intl: ^0.17.0
+  flutter_colorpicker: ^1.0.3
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -33,6 +37,7 @@ flutter:
     - assets/magazine_pics/
     - assets/profile_pics/
     - assets/sample_data/
+    - assets/fooderlich_assets/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
