Preserve children state and lazy load them

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.17.0
   flutter_colorpicker: ^1.0.3
   google_fonts: ^3.0.1
+  flutter_lazy_indexed_stack: ^0.0.3
 
 dev_dependencies:
   flutter_test:
