--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,15 @@ dependencies:
   intl: ^0.17.0
   flutter_colorpicker: ^1.0.3
   google_fonts: ^3.0.1
-  flutter_lazy_indexed_stack: ^0.0.3
+  auto_route: ^4.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  auto_route_generator: ^4.2.0
+  build_runner: ^2.2.0
 
 flutter:
 
