--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   google_fonts: ^3.0.1
   auto_route: ^4.2.1
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
